Testando de iframe carrosel

--- a/imperio/slide.html
+++ b/imperio/slide.html
@@ -5,31 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Império Francisca</title>
 	<link rel="shortcut icon" href="images/lb.svg" type="image/x-icon">
-	<link rel="stylesheet" href="estilos/style.css">
+	<link rel="stylesheet" href="estilos/slide.css">
 </head>
 <body>
-	<header>
-		<div id="leftHeader">
-			<img src="images/icons/menu.png" alt="Heart Plus">
-		</div>
-		<div id="logo">
-			<img id="logoImage" src="images/imperiologo.svg" alt="logoimperio">
-			<h1 id="mainTitle">IMPÉRIO</h1>
-			<h1 id="secTitle">Francisca</h1>
-		</div>
-		<div id="rightHeader">
-			<img src="images/icons/heart_plus.png" alt="Heart Plus">
-			<img src="images/icons/shop_bag.png" alt="Shopping Bag">
-		</div>
-	</header>
-	<main>
 		<section id="slider">
-
 			<div id="slides">
+
 				<input type="radio" name="slider-btn" id="sliderbtn1" onclick="clickslide(1)">
 				<input type="radio" name="slider-btn" id="sliderbtn2" onclick="clickslide(2)">
 				<input type="radio" name="slider-btn" id="sliderbtn3" onclick="clickslide(3)">
 				<input type="radio" name="slider-btn" id="sliderbtn4" onclick="clickslide(4)">
+
 				<div class="slide first">
 					<img src="images/slides/slidea.jpg" alt="slide A">
 				</div>
@@ -56,14 +42,10 @@
 					<label for="sliderbtn3" class="manual-btn"></label>
 					<label for="sliderbtn4" class="manual-btn"></label>
 				</div>
+
 			</div>
-
 		</section>
-	</main>
-	<footer>
 
-	</footer>
-	<script src="script/script.js">
-	</script>
+	<script src="script/script.js"></script>
 </body>
 </html>
