--- a/imperio/index.html
+++ b/imperio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
 		</div>
 	</header>
 	<main>
-		<iframe src="slide.html" frameborder="0"></iframe>
+		<iframe id="mainSlider" src="slide.html" frameborder="0"></iframe>
 	</main>
 	<footer>
 
