--- a/imperio/slides/old/slidedes.html
+++ b/imperio/slides/old/slidedes.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Império Francisca</title>
 	<link rel="shortcut icon" href="images/lb.svg" type="image/x-icon">
-	<link rel="stylesheet" href="estilos/slide.css">
+	<link rel="stylesheet" href="../estilos/slide.css">
 </head>
 <body>
 		<section id="slider">
@@ -17,16 +17,16 @@
 				<input type="radio" name="slider-btn" id="sliderbtn4" onclick="clickslide(4)">
 
 				<div class="slide first">
-					<img src="images/slides/slidea.jpg" alt="slide A">
+					<img src="../images/slides/desktop/slidea.jpg" alt="slide A">
 				</div>
 				<div class="slide">
-					<img src="images/slides/slideb.jpg" alt="slide B">
+					<img src="../images/slides/desktop/slideb.jpg" alt="slide B">
 				</div>
 				<div class="slide">
-					<img src="images/slides/slidec.jpg" alt="slide C">
+					<img src="../images/slides/desktop/slidec.jpg" alt="slide C">
 				</div>
 				<div class="slide">
-					<img src="images/slides/slided.jpg" alt="slide D">
+					<img src="../images/slides/desktop/slided.jpg" alt="slide D">
 				</div>
 
 				<div class="navigation-auto">
@@ -46,6 +46,6 @@
 			</div>
 		</section>
 
-	<script src="script/script.js"></script>
+	<script src="../script/script.js"></script>
 </body>
 </html>
