Finalização da responsividade do Slider (carrossel)

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -7,7 +7,7 @@
 	<title>Império Francisca</title>
 	<link rel="shortcut icon" href="images/lb.svg" type="image/x-icon">
 	<link rel="stylesheet" href="estilos/style.css">
-
+	<link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
 
@@ -27,8 +27,8 @@
 	</header>
 	<main>
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
-		<a id="lka" href="slides/slidedes.html" target="mslide">desktop</a>
-		<a id="lkb" href="slides/slidemob.html" target="mslide">mobile</a>
+
+		
 	</main>
 	<footer>
 
