--- a/imperio/slides/slide.html
+++ b/imperio/slides/slide.html
@@ -6,6 +6,7 @@
 	<title>Império Francisca</title>
 	<link rel="shortcut icon" href="images/lb.svg" type="image/x-icon">
 	<link rel="stylesheet" href="../estilos/slidecontrol.css">
+	<link rel="stylesheet" href="../estilos/media-query-slider.css">
 </head>
 <body>
 		<section id="slider">
