Atualização de responsividade

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -28,7 +28,31 @@
 	<main>
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
 
-		
+		<div id="shopContainer">
+			<div class="shopItens">
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+				<div class="shopProduct"></div>
+			</div>
+		</div>
+
 	</main>
 	<footer>
 
