Atualização do site, adição de itens a loja virtual

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -30,35 +30,73 @@
 
 		<div id="shopContainer">
 			<div class="shopItens">
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
-				<div class="shopProduct"></div>
+				<!-- DIVISAO DE PRODUTO -->
+				<div class="shopProduct">
+					<img src="produtos/blusa_exemplo.png" alt="ItemLoja">
+					<div class="descProduto">
+						<h1 class="nomeProduto">Blusa de exemplo</h1>
+						<p class="antigoProduto"></p>
+						<p class="valorProduto">R$ 39,99</p>
+					</div>
+				</div>
+				<!-- DIVISAO DE PRODUTO -->
+				<!-- DIVISAO DE PRODUTO -->
+				<div class="shopProduct">
+					<img src="produtos/conjunto_casal_exemplo.png" alt="ItemLoja">
+					<div class="descProduto">
+						<h1 class="nomeProduto">Super conjunto social de casal para festas de exemplo</h1>
+						<p class="antigoProduto">R$ 199,90</p>
+						<p class="valorProduto">R$ 129,90</p>
+					</div>
+				</div>
+				<!-- DIVISAO DE PRODUTO -->
+				<!-- DIVISAO DE PRODUTO -->
+				<div class="shopProduct">
+					<img src="produtos/conjunto_feminino_exemplo.png" alt="ItemLoja">
+					<div class="descProduto">
+						<h1 class="nomeProduto">Conjunto feminino de exemplo</h1>
+						<p class="antigoProduto">R$ 89,90</p>
+						<p class="valorProduto">R$ 74,49</p>
+					</div>
+				</div>
+				<!-- DIVISAO DE PRODUTO -->
+				<!-- DIVISAO DE PRODUTO -->
+				<div class="shopProduct">
+					<img src="produtos/conjunto_masculino_exemplo.png" alt="ItemLoja">
+					<div class="descProduto">
+						<h1 class="nomeProduto">Conjunto masculino de exemplo</h1>
+						<p class="antigoProduto">R$ 99,90</p>
+						<p class="valorProduto">R$ 64,49</p>
+					</div>
+				</div>
+				<!-- DIVISAO DE PRODUTO -->
+				<!-- DIVISAO DE PRODUTO -->
+				<div class="shopProduct">
+					<img src="produtos/conjunto_unisex_exemplo.png" alt="ItemLoja">
+					<div class="descProduto">
+						<h1 class="nomeProduto">Conjunto unisex de exemplo</h1>
+						<p class="antigoProduto">R$ 74,99</p>
+						<p class="valorProduto">R$ 69,90</p>
+					</div>
+				</div>
+				<!-- DIVISAO DE PRODUTO -->
+				<!-- DIVISAO DE PRODUTO -->
+				<div class="shopProduct">
+					<img src="produtos/vestido_exemplo.png" alt="ItemLoja">
+					<div class="descProduto">
+						<h1 class="nomeProduto">Vestido social de exemplo</h1>
+						<p class="antigoProduto"></p>
+						<p class="valorProduto">R$ 127,89</p>
+					</div>
+				</div>
+				<!-- DIVISAO DE PRODUTO -->
 			</div>
 		</div>
-
 	</main>
 	<footer>
-
+		<h1>OLA GALERA</h1>
 	</footer>
 	<script src="script/script.js">
 	</script>
-
 </body>
 </html>
