Atualização de incontáveis recursos da página

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -94,8 +94,27 @@
 		</div>
 	</main>
 	<footer>
-		<p>teste</p>
-	</footer>
+		<div class="footerblock">
+			<h1>Permaneça conectado</h1>
+			<ul class="permaconectado">
+				<li><a href="https://api.whatsapp.com/send/?phone=19997597681&text=🦒Olá, Império Francisca! Gostaria de entrar em contato para tirar uma dúvida. 💖" target="_blank"><img src="images/footerlogo/whats.png" alt="whatsapp"></a></li>
+				<li><a href="https://www.instagram.com/imperiofrancisca/?theme=dark" target="_blank"><img src="images/footerlogo/insta.png" alt="instagram"></a></li>
+				<li><a href="#"><img src="images/footerlogo/face.png" alt="facebook"></a></li>
+				<li><a href="#"><img src="images/footerlogo/youtube.png" alt="youtube"></a></li>
+				<li><a href="#"><img src="images/footerlogo/tiktok.png" alt="tiktok"></a></li>
+				<li><a href="#"><img src="images/footerlogo/linked.png" alt="linkedin"></a></li>
+				<li><a href="#"><img src="images/footerlogo/twitterx.png" alt="x"></a></li>
+			</ul>
+		</div>
+		<div class="footerblock">
+			<h1>Institucional</h1>
+			<ul>
+				<li><a href="#">Sobre o Império Francisca</a></li>
+				<li><a href="#">Termos e condições</a></li>
+				<li><a href="#">Nossa história</a></li>
+				<li><a href="#">Trocas e Devoluções</a></li>
+			</ul>
+		</div>
 	<script src="script/script.js">
 	</script>
 </body>
