Adição de menu funcional a esquerda

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" id="htmlSet">
 <head>
 
 	<meta charset="UTF-8">
@@ -13,7 +13,7 @@
 
 	<header>
 		<div id="leftHeader">
-			<img src="images/icons/menu.png" alt="Heart Plus" onclick="clickthrow()">
+			<img src="images/icons/menu.png" alt="Menu" onclick="clickthrow(1)">
 		</div>
 		<div id="logo">
 			<img id="logoImage" src="images/imperiologo.svg" alt="logoimperio">
@@ -114,6 +114,14 @@
 				<li><a href="#">Nossa história</a></li>
 				<li><a href="#">Trocas e Devoluções</a></li>
 			</ul>
+		</div>
+		<div class="shadowBox" onclick="clickthrow(0)" style="display: none;"></div>
+		<div class="left_menuBar" style="display: none;">
+			<h1>Conteudo placeholder</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis suscipit numquam inventore sed excepturi quo voluptatum placeat asperiores! Officia ipsam voluptates vero, esse praesentium neque earum itaque asperiores veniam. Eaque!
+
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit inventore corporis ullam accusantium tenetur, sapiente magni officia distinctio velit illo dolor, deleniti minima maiores at. Sapiente assumenda nam mollitia.
+			</p>
 		</div>
 	<script src="script/script.js">
 	</script>
