Ultima atualização do dia

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -109,7 +109,7 @@
 		<div class="footerblock">
 			<h1>Institucional</h1>
 			<ul>
-				<li><a href="#">Sobre o Império Francisca</a></li>
+				<li><a href="Institucional/sobre.html">Sobre o Império Francisca</a></li>
 				<li><a href="#">Termos e condições</a></li>
 				<li><a href="#">Nossa história</a></li>
 				<li><a href="#">Trocas e Devoluções</a></li>
@@ -117,11 +117,22 @@
 		</div>
 		<div class="shadowBox" onclick="clickthrow(0)" style="display: none;"></div>
 		<div class="left_menuBar" style="display: none;">
-			<h1>Conteudo placeholder</h1>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis suscipit numquam inventore sed excepturi quo voluptatum placeat asperiores! Officia ipsam voluptates vero, esse praesentium neque earum itaque asperiores veniam. Eaque!
-
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit inventore corporis ullam accusantium tenetur, sapiente magni officia distinctio velit illo dolor, deleniti minima maiores at. Sapiente assumenda nam mollitia.
-			</p>
+			<div id="menuHeader">
+				<h1>Navegue por categoria</h1>
+				<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="closeMenu"></span>
+			</div>
+			<ul>
+				<li  class="menuItens">• Mostrar todos</li>
+				<li class="menuTitles"><img src="images/menuicons/roupas.png" alt="roupas">Roupas</li>
+				<li class="menuItens">• Camisas</li>
+				<li class="menuItens">• Calças</li>
+				<li class="menuItens">• Vestidos</li>
+				<li class="menuTitles"><img src="images/menuicons/joias.png" alt="">Acessórios</li>
+				<li class="menuItens">• Bolsas</li>
+				<li class="menuItens">• Cintos</li>
+				<li class="menuItens">• Porta-Joias</li>
+				<li class="menuItens">• Brincos</li>
+			</ul>
 		</div>
 	<script src="script/script.js">
 	</script>
