--- a/imperio/index.html
+++ b/imperio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" id="htmlSet">
 <head>
-
+	<!-- HTML HEAD START -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Império Francisca</title>
@@ -10,22 +10,23 @@
 	<link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-
+	<!-- HTML BODY START -->
 	<header>
-		<div id="leftHeader">
+		<div id="leftHeader"><!-- CABEÇALHO DA ESQUERDA -->
 			<img src="images/icons/menu.png" alt="Menu" onclick="clickthrow(1)">
 		</div>
-		<div id="logo">
+		<div id="logo"><!-- LOGO CENTRAL RENDERIZADO EM CSS -->
 			<img id="logoImage" src="images/imperiologo.svg" alt="logoimperio">
 			<h1 id="mainTitle">IMPÉRIO</h1>
 			<h1 id="secTitle">Francisca</h1>
 		</div>
-		<div id="rightHeader">
-			<img src="images/icons/heart_plus.png" alt="Heart Plus">
-			<img src="images/icons/shop_bag.png" alt="Shopping Bag">
+		<div id="rightHeader"><!-- CABEÇALHO DA DIREITA -->
+			<img src="images/icons/heart_plus.png" alt="Heart Plus" onclick="clickthrow(3)">
+			<img src="images/icons/shop_bag.png" alt="Shopping Bag" onclick="clickthrow(2)">
 		</div>
 	</header>
 	<main>
+		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
 
 		<div id="shopContainer">
@@ -40,6 +41,7 @@
 					</div>
 				</div>
 				<!-- DIVISAO DE PRODUTO -->
+
 				<!-- DIVISAO DE PRODUTO -->
 				<div class="shopProduct">
 					<img src="produtos/conjunto_casal_exemplo.png" alt="ItemLoja">
@@ -50,6 +52,7 @@
 					</div>
 				</div>
 				<!-- DIVISAO DE PRODUTO -->
+
 				<!-- DIVISAO DE PRODUTO -->
 				<div class="shopProduct">
 					<img src="produtos/conjunto_feminino_exemplo.png" alt="ItemLoja">
@@ -60,6 +63,7 @@
 					</div>
 				</div>
 				<!-- DIVISAO DE PRODUTO -->
+
 				<!-- DIVISAO DE PRODUTO -->
 				<div class="shopProduct">
 					<img src="produtos/conjunto_masculino_exemplo.png" alt="ItemLoja">
@@ -70,6 +74,7 @@
 					</div>
 				</div>
 				<!-- DIVISAO DE PRODUTO -->
+
 				<!-- DIVISAO DE PRODUTO -->
 				<div class="shopProduct">
 					<img src="produtos/conjunto_unisex_exemplo.png" alt="ItemLoja">
@@ -80,6 +85,7 @@
 					</div>
 				</div>
 				<!-- DIVISAO DE PRODUTO -->
+
 				<!-- DIVISAO DE PRODUTO -->
 				<div class="shopProduct">
 					<img src="produtos/vestido_exemplo.png" alt="ItemLoja">
@@ -94,9 +100,11 @@
 		</div>
 	</main>
 	<footer>
+		<!-- FOOTERBLOCK PERMANEÇA CONECTADO -->
 		<div class="footerblock">
 			<h1>Permaneça conectado</h1>
 			<ul class="permaconectado">
+				<!-- ITENS DE PERMANEÇA CONECTADO -->
 				<li><a href="https://api.whatsapp.com/send/?phone=19997597681&text=🦒Olá, Império Francisca! Gostaria de entrar em contato para tirar uma dúvida. 💖" target="_blank"><img src="images/footerlogo/whats.png" alt="whatsapp"></a></li>
 				<li><a href="https://www.instagram.com/imperiofrancisca/?theme=dark" target="_blank"><img src="images/footerlogo/insta.png" alt="instagram"></a></li>
 				<li><a href="#"><img src="images/footerlogo/face.png" alt="facebook"></a></li>
@@ -106,23 +114,30 @@
 				<li><a href="#"><img src="images/footerlogo/twitterx.png" alt="x"></a></li>
 			</ul>
 		</div>
+		<!-- FOOTERBLOCK INSTITUCIONAL -->
 		<div class="footerblock">
 			<h1>Institucional</h1>
 			<ul>
-				<li><a href="Institucional/sobre.html">Sobre o Império Francisca</a></li>
-				<li><a href="#">Termos e condições</a></li>
-				<li><a href="#">Nossa história</a></li>
-				<li><a href="#">Trocas e Devoluções</a></li>
+				<!-- ITENS INTITUCIONAIS -->
+				<li class="footeritem"><a href="Institucional/sobre.html">Sobre o Império Francisca</a></li>
+				<li class="footeritem"><a href="#">Termos e condições</a></li>
+				<li class="footeritem"><a href="#">Nossa história</a></li>
+				<li class="footeritem"><a href="#">Trocas e Devoluções</a></li>
 			</ul>
 		</div>
+		<!-- CAIXA FADE AO ABRIR ALGUM MENU LATERAL, TAMBEM SERVE COMO BOTÃO PARA RETORNAR -->
 		<div class="shadowBox" onclick="clickthrow(0)" style="display: none;"></div>
+		<!-- BARRA DE MENU DA ESQUERDA -->
 		<div class="left_menuBar" style="display: none;">
 			<div id="menuHeader">
+				<!-- TITULO DA BARRA DE NAVEGAÇÃO -->
 				<h1>Navegue por categoria</h1>
+				<!-- bOTÃO DE FECHAR BARRA DE NAVEGAÇÃO -->
 				<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="closeMenu"></span>
 			</div>
 			<ul>
-				<li  class="menuItens">• Mostrar todos</li>
+				<!-- ITENS DA BARRA DE NAVEGAÇÃO -->
+				<li  class="menuItens">○ Mostrar todos</li>
 				<li class="menuTitles"><img src="images/menuicons/roupas.png" alt="roupas">Roupas</li>
 				<li class="menuItens">• Camisas</li>
 				<li class="menuItens">• Calças</li>
@@ -134,6 +149,14 @@
 				<li class="menuItens">• Brincos</li>
 			</ul>
 		</div>
+			<div class="right_cartShop">
+				<div id="cartHeader">
+					<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="closeMenu"></span>
+					<h1>Carrinho de compras</h1>
+				</div>
+				<p>Você ainda não tem nenhum item em seu carrinho</p>
+			</div>
+	<!-- SCRIPT GERAL DA PAGINA -->
 	<script src="script/script.js">
 	</script>
 </body>
