Criação de um terceiro painel para interação com o usuário

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -125,6 +125,10 @@
 				<li class="footeritem"><a href="#">Trocas e Devoluções</a></li>
 			</ul>
 		</div>
+	</footer>
+	<div id="creditsFooter">
+		<h3>Quer um site igual a este? <a href="https://github.com/AndreFilipeD" target="_blank">Clique aqui</a> e saiba mais.</h3>
+	</div>
 		<!-- CAIXA FADE AO ABRIR ALGUM MENU LATERAL, TAMBEM SERVE COMO BOTÃO PARA RETORNAR -->
 		<div class="shadowBox" onclick="clickthrow(0)" style="display: none;"></div>
 		<!-- BARRA DE MENU DA ESQUERDA -->
@@ -149,13 +153,21 @@
 				<li class="menuItens">• Brincos</li>
 			</ul>
 		</div>
-			<div class="right_cartShop">
-				<div id="cartHeader">
-					<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="closeMenu"></span>
-					<h1>Carrinho de compras</h1>
-				</div>
-				<p>Você ainda não tem nenhum item em seu carrinho</p>
+		<div class="right_cartShop">
+			<div id="cartHeader">
+				<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="closeMenu"></span>
+				<h1>Carrinho de compras</h1>
 			</div>
+			<p>Você ainda não tem nenhum item em seu carrinho</p>
+		</div>
+		<div class="center_connectPlus">
+			<div id="centerHeart">
+				<h1>Entre em contato</h1>
+				<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="closeMenu"></span>
+			</div>
+			<p>PLACEHOLDER PLACEHOLDER</p>
+		</div>
+	
 	<!-- SCRIPT GERAL DA PAGINA -->
 	<script src="script/script.js">
 	</script>
