--- a/imperio/index.html
+++ b/imperio/index.html
@@ -120,9 +120,9 @@
 			<ul>
 				<!-- ITENS INTITUCIONAIS -->
 				<li class="footeritem"><a href="Institucional/sobre.html">Sobre o Império Francisca</a></li>
-				<li class="footeritem"><a href="#">Termos e condições</a></li>
-				<li class="footeritem"><a href="#">Nossa história</a></li>
-				<li class="footeritem"><a href="#">Trocas e Devoluções</a></li>
+				<li class="footeritem"><a href="Institucional/termos.html">Termos e condições</a></li>
+				<li class="footeritem"><a href="Institucional/historia.html">Nossa história</a></li>
+				<li class="footeritem"><a href="Institucional/troca.html">Trocas e Devoluções</a></li>
 			</ul>
 		</div>
 	</footer>
