Iniciando projeto de teste Canvas

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <canvas id="telateste" width="600" height="1000">Seu navegador não <br>suportou o elemento canvas</canvas>
+    <canvas id="areaCanvas" width="600" height="1000">Seu navegador não <br>suportou o elemento canvas</canvas>
     <script src="script.js"></script>
 </body>
 </html>
