Tentativas de criar campo estelar responsivo

--- a/stars/index.html
+++ b/stars/index.html
@@ -6,7 +6,10 @@
     <title>Starvoid</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="canvEl">
+    <canvas id="starfield" width="900" height="900">
+        
+    </canvas>
 <script src="script.js"></script>
 </body>
 </html>
