Adição de icone no Starvoid

--- a/stars/amazing starfield/index.html
+++ b/stars/amazing starfield/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starvoid</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="circle.ico" type="image/x-icon">
 </head>
 <body id="canvEl">
     <canvas id="starfield" width="900" height="900">
