Retornando projeto da loja agora mais responsivo

--- a/imperio/BACKUP/indexbackup.html
+++ b/imperio/BACKUP/indexbackup.html
@@ -87,7 +87,7 @@
 				<!-- DIVISAO DE PRODUTO -->
 
 				<!-- DIVISAO DE PRODUTO -->
-				<div class="shopProduct">
+				<div class="shopProduct" onclick="reshop()">
 					<img src="produtos/vestido_exemplo.png" alt="ItemLoja">
 					<div class="descProduto">
 						<h1 class="nomeProduto">Vestido social de exemplo</h1>
@@ -98,7 +98,7 @@
 				<!-- DIVISAO DE PRODUTO -->
 
 				<!-- DIVISAO DE PRODUTO -->
-				<div class="shopProduct" onclick="loadProduct()">
+				<div class="shopProduct">
 					<img src="produtos/vestido_exemplo.png" alt="ItemLoja">
 					<div class="descProduto">
 						<h1 class="nomeProduto">Vestido padrão de exemplo</h1>
@@ -185,6 +185,5 @@
 	<!-- SCRIPT GERAL DA PAGINA -->
 	<script src="script/script.js">
 	</script>
-	<script src="script/produtos.js"></script>
 </body>
 </html>
