Reparo de layout e muitas melhorias de interatividade

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -28,7 +28,7 @@
 	<main>
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
-
+		<aside id="msgIntro">TESTANDO 123</aside>
 		<div id="shopContainer">
 			<div class="shopItens">
 				<!-- DIVISAO DE PRODUTO -->
@@ -85,10 +85,10 @@
 				<li class="menuItens" onclick="loadProduct('Calça'),clickthrow(0)">• Calças</li>
 				<li class="menuItens" onclick="loadProduct('Vestido'),clickthrow(0)">• Vestidos</li>
 				<li class="menuTitles"><img src="images/menuicons/joias.png" alt="acessorios">Acessórios</li>
-				<li class="menuItens">• Bolsas</li>
-				<li class="menuItens">• Cintos</li>
-				<li class="menuItens">• Porta-Joias</li>
-				<li class="menuItens">• Brincos</li>
+				<li class="menuItens" onclick="loadProduct('Bolsa'),clickthrow(0)">• Bolsas</li>
+				<li class="menuItens" onclick="loadProduct('Cinto'),clickthrow(0)">• Cintos</li>
+				<li class="menuItens" onclick="loadProduct('Joias'),clickthrow(0)">• Porta-Joias</li>
+				<li class="menuItens" onclick="loadProduct('Brincos'),clickthrow(0)">• Brincos</li>
 			</ul>
 		</div>
 		<div class="right_cartShop">
@@ -104,7 +104,7 @@
 				<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="fecharMenu"></span>
 			</div>
 			<div class="heartSpace">
-				<a class="heartWhats" href="#"><img src="images/icons/scart.png" alt="icone carrinho">Chame no Whatsapp</a>
+				<a class="heartWhats" href="https://api.whatsapp.com/send/?phone=19997597681&text=🦒Olá, Império Francisca! Gostaria de entrar em contato para tirar uma dúvida. 💖" target="_blank"><img src="images/icons/scart.png" alt="icone carrinho">Chame no Whatsapp</a>
 				<a class="heartInsta" href="https://ig.me/m/imperiofrancisca/" target="_blank"><img src="images/icons/scart.png" alt="icone carrinho">Chame no Instagram</a>
 			</div>
 		</div>
