--- a/imperio/index.html
+++ b/imperio/index.html
@@ -28,7 +28,7 @@
 	<main>
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
-		<aside id="msgIntro">TESTANDO 123</aside>
+		<aside id="msgIntro"><!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO --></aside>
 		<div id="shopContainer">
 			<div class="shopItens">
 				<!-- DIVISAO DE PRODUTO -->
@@ -98,6 +98,17 @@
 			</div>
 			<p>Você ainda não tem nenhum item em seu carrinho</p>
 		</div>
+		<div class="center_connectPlus">
+			<div id="centerHeart">
+				<h1>Entre em contato</h1>
+				<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="fecharMenu"></span>
+			</div>
+			<div class="heartSpace">
+				<a class="heartWhats" href="https://api.whatsapp.com/send/?phone=19997597681&text=🦒Olá, Império Francisca! Gostaria de entrar em contato para tirar uma dúvida. 💖" target="_blank"><img src="images/icons/scart.png" alt="icone carrinho">Chame no Whatsapp</a>
+				<a class="heartInsta" href="https://ig.me/m/imperiofrancisca/" target="_blank"><img src="images/icons/scart.png" alt="icone carrinho">Chame no Instagram</a>
+			</div>
+		</div>
+
 		<div class="center_connectPlus">
 			<div id="centerHeart">
 				<h1>Entre em contato</h1>
