Testes para criação de um mostruário dinâmico

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -28,7 +28,10 @@
 	<main>
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
-		<aside id="msgIntro"><!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO --></aside>
+		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
+		<aside id="showProduct">Will Appear here bro!</aside>
+		<!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO -->
+		<aside id="msgIntro"></aside>
 		<div id="shopContainer">
 			<div class="shopItens">
 				<!-- DIVISAO DE PRODUTO -->
