--- a/imperio/index.html
+++ b/imperio/index.html
@@ -29,7 +29,10 @@
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
-		<aside id="showProduct">Will Appear here bro!</aside>
+		<aside id="showProduct"><a href="#" onclick="showProduct(0)">Clique para esconder</a>
+		<h2 class="pshowTitle">Blusa de exemplo</h2>
+		<img class="pshowMainimage" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+		</aside>
 		<!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO -->
 		<aside id="msgIntro"></aside>
 		<div id="shopContainer">
