Adicionando Grid Layout no mostruário da loja

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -28,13 +28,22 @@
 	<main>
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
+		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
 		<aside id="showProduct"><a href="#" onclick="showProduct(0)">Clique para esconder</a>
-		<h2 class="pshowTitle">Blusa de exemplo</h2>
+		<div class="pshowDefinition"> Blusa de Exemplo <br>Dados Dados<br>Dados Dados<br>Dados Dados</div>
 		<img class="pshowMainimage" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+		<div class="pshowShare"> Compartilhe </div>
+		<div class="pshowSecimages"> 
+			<img class="SecimgA" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+			<img class="SecimgB" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+			<img class="SecimgC" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+		</div>
 		</aside>
+		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
 		<!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO -->
 		<aside id="msgIntro"></aside>
+		<!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO -->
 		<div id="shopContainer">
 			<div class="shopItens">
 				<!-- DIVISAO DE PRODUTO -->
