Atualização do grid Layout

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -39,6 +39,13 @@
 			<img class="SecimgB" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
 			<img class="SecimgC" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
 		</div>
+		<div class="pshowCartadd">
+		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
+		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
+		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
+		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
+		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
+		</div>
 		</aside>
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
 		<!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO -->
