Atualização do mostruário

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -30,8 +30,8 @@
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
-		<aside id="showProduct"><a href="#" onclick="showProduct(0)">Clique para esconder</a>
-		<div class="pshowDefinition"> Blusa de Exemplo <br>Dados Dados<br>Dados Dados<br>Dados Dados</div>
+		<aside id="showProduct"><a href="#" onclick="showProduct(-1)">Clique para esconder</a>
+		<div class="pshowDefinition"><h2 class="pshowName"></h2><p class="pshowDef"></p></div>
 		<img class="pshowMainimage" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
 		<div class="pshowShare"> Compartilhe </div>
 		<div class="pshowSecimages"> 
