Envio atrasado ao repositório, conteúdo de sexta-feira

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -32,8 +32,18 @@
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
 		<aside id="showProduct"><a href="#" onclick="showProduct(-1)">Clique para esconder</a>
 		<div class="pshowDefinition"><h2 class="pshowName"></h2><p class="pshowDef"></p></div>
-		<img class="pshowMainimage" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
-		<div class="pshowShare"> Compartilhe </div>
+		<div class="pshowMainimagespace">
+			<img class="pshowMainimage" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+			<div class="pshowPromo"></div>
+		</div>
+		<div class="pshowShare"> Compartilhe <br>
+		<img src="images/footerlogo/whats.png" alt="WhatsLogo">
+		<img src="images/footerlogo/insta.png" alt="InstaLogo">
+		<img src="images/footerlogo/face.png" alt="FaceLogo">
+		<img src="images/footerlogo/youtube.png" alt="YoutubeLogo">
+		<img src="images/footerlogo/tiktok.png" alt="TiktokLogo">
+		<img src="images/footerlogo/linked.png" alt="LinkedLogo">
+		</div>
 		<div class="pshowSecimages"> 
 			<img class="SecimgA" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
 			<img class="SecimgB" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
