--- a/imperio/index.html
+++ b/imperio/index.html
@@ -31,11 +31,26 @@
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
 		<aside id="showProduct"><a href="#" onclick="showProduct(-1)">Clique para esconder</a>
-		<div class="pshowDefinition"><h2 class="pshowName"></h2><p class="pshowDef"></p></div>
+		<!-- BOX MAIN IMAGE -->
 		<div class="pshowMainimagespace">
 			<img class="pshowMainimage" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
 			<div class="pshowPromo"></div>
 		</div>
+		<!-- BOX SECOND IMAGE -->
+		<div class="pshowSecimages"> 
+			<img class="SecimgA" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+			<img class="SecimgB" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+			<img class="SecimgC" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+		</div>
+		<!-- BOX CARTSHOP -->
+		<div class="pshowCartadd">
+			<h2 class="pshowName"></h2>
+			<h2 class="pshowPrice"></h2>
+		</div>
+		<!-- BOX CARTBUTTONADD -->
+		<div class="cartButton">Adicionar ao carrinho
+		</div>
+		<!-- BOX SHARE CONTENT -->
 		<div class="pshowShare"> Compartilhe <br>
 		<img src="images/footerlogo/whats.png" alt="WhatsLogo">
 		<img src="images/footerlogo/insta.png" alt="InstaLogo">
@@ -44,18 +59,9 @@
 		<img src="images/footerlogo/tiktok.png" alt="TiktokLogo">
 		<img src="images/footerlogo/linked.png" alt="LinkedLogo">
 		</div>
-		<div class="pshowSecimages"> 
-			<img class="SecimgA" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
-			<img class="SecimgB" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
-			<img class="SecimgC" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
-		</div>
-		<div class="pshowCartadd">
-		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
-		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
-		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
-		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
-		BOTÃO ADICIONAR AO CARRINHO, FORMAS DE PAGAMENTO
-		</div>
+		<!-- BOX DEFINITION -->
+		<div class="pshowDefinition"><p class="pshowDef"></p></div>
+		<!-- FIM BOX DO MOSTRUÁRIO -->
 		</aside>
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
 		<!-- MENSAGEM SAUDAÇÃO + PESQUISA DE FILTRO -->
