--- a/imperio/index.html
+++ b/imperio/index.html
@@ -15,7 +15,7 @@
 		<div id="leftHeader"><!-- CABEÇALHO DA ESQUERDA -->
 			<img src="images/icons/menu.png" alt="Menu" onclick="clickthrow(1)">
 		</div>
-		<div id="logo" onclick="cleanProduct()"><!-- LOGO CENTRAL RENDERIZADO EM CSS -->
+		<div id="logo" onclick="clickthrow(0), showProduct(-1)"><!-- LOGO CENTRAL RENDERIZADO EM CSS -->
 			<img id="logoImage" src="images/imperiologo.svg" alt="logo imperio francisca">
 			<h1 id="mainTitle">IMPÉRIO</h1>
 			<h1 id="secTitle">Francisca</h1>
