Organização de código e otimização de responsividade

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -30,17 +30,17 @@
 		<iframe id="mainSlider" name="mslide" src="slides/slide.html" frameborder="0"></iframe>
 		<!-- IFRAME QUE CARREGA O SLIDER -->
 		<!-- ESPAÇO DE APRESENTAÇÃO DE PRODUTO -->
-		<aside id="showProduct"><a href="#" onclick="showProduct(-1)">Clique para esconder</a>
+		<aside id="showProduct"><a href="#" class="returnLink" onclick="showProduct(-1)">Voltar ao inicio</a>
 		<!-- BOX MAIN IMAGE -->
 		<div class="pshowMainimagespace">
-			<img class="pshowMainimage" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+			<img class="pshowMainimage" alt="blusaExemplo">
 			<div class="pshowPromo"></div>
 		</div>
 		<!-- BOX SECOND IMAGE -->
 		<div class="pshowSecimages"> 
-			<img class="SecimgA" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
-			<img class="SecimgB" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
-			<img class="SecimgC" src="produtos/roupas_Teste/blusa_exemplo.png" alt="blusaExemplo">
+			<img class="SecimgA" alt="blusaExemplo">
+			<img class="SecimgB" alt="blusaExemplo">
+			<img class="SecimgC" alt="blusaExemplo">
 		</div>
 		<!-- BOX CARTSHOP -->
 		<div class="pshowCartadd">
