Criado remoção de itens clicando na lixeira

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -48,7 +48,7 @@
 			<h2 class="pshowPrice"></h2>
 		</div>
 		<!-- BOX CARTBUTTONADD -->
-		<div class="cartButton" onclick="addCart(), clickthrow(2)">Adicionar ao carrinho
+		<div class="cartButton" onclick="addCart(1), clickthrow(2)">Adicionar ao carrinho
 		</div>
 		<!-- BOX SHARE CONTENT -->
 		<div class="pshowShare"> Compartilhe <br>
@@ -138,7 +138,7 @@
 			<div class="cartBody">
 				<div class="cartList">Você ainda não tem nenhum item em seu carrinho</div>
 				<div class="cartTotal">
-					<div class="cartSendButton" onclick="addCart()">Enviar no Whatsapp</div>
+					<div class="cartSendButton" onclick="addCart(1)">Enviar no Whatsapp</div>
 				</div>
 			</div>
 		</div>
