Finalização do carrinho

--- a/imperio/index.html
+++ b/imperio/index.html
@@ -138,7 +138,8 @@
 			<div class="cartBody">
 				<div class="cartList">Você ainda não tem nenhum item em seu carrinho</div>
 				<div class="cartTotal">
-					<div class="cartSendButton" onclick="addCart(1)">Enviar no Whatsapp</div>
+					<div class="cartResume">ValorTotal</div>
+					<a class="cartSendButton" href="https://api.whatsapp.com/send/?phone=19997597681&text=🦒Olá, Império Francisca! Gostaria de entrar em contato para tirar uma dúvida. 💖" target="_blank">Enviar no Whatsapp</a>
 				</div>
 			</div>
 		</div>
